fix(notification): use direct portal.html and pray.html URLs in email notifications